<resources>
    <string name="app_name">Periodic Table</string>
    <string name="app_author_signature">Powered by Fujita Labs</string>
    <string name="app_version">Version 0.0.1</string>
    <string name="app_year">2022</string>
    <string name="author_email">labsfujita@gmail.com</string>
    <string name="author_instagram">fujitalabs</string>
    <string name="title_about">About</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_feedback">Feedback and Contact</string>
    <string name="title_filters">Select filters</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_zoom_in">Zoom in</string>
    <string name="menu_zoom_out">Zoom out</string>
    <string name="menu_fit_to_screen">Fit to screen</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_language">Language</string>
    <string name="menu_feedback">Feedback and contact</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_about">About</string>
    <string name="dialog_set_theme">Set theme:</string>
    <string name="dialog_set_language">Set language:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_instagram">Instagram:</string>
    <string name="label_name">Name:</string>
    <string name="label_symbol">Symbol:</string>
    <string name="label_atomic_number">Atomic number:</string>
    <string name="label_atomic_weight">Atomic weight:</string>
    <string name="label_atomic_weight_unit">(u, g/mol)</string>
    <string name="label_electrons">Electrons</string>
    <string name="label_protons">Protons</string>
    <string name="label_neutrons">Neutrons</string>
    <string name="label_latin_name">Latin name:</string>
    <string name="label_discovery">Discovery:</string>
    <string name="label_group">Group:</string>
    <string name="label_period">Period:</string>
    <string name="label_block">Block:</string>
    <string name="label_category">Category:</string>
    <string name="label_cas_number">CAS number:</string>
    <string name="button_clear_filters">CLEAR FILTERS</string>
    <string name="button_apply">APPLY</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_see_more">SEE MORE</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="category_nonmetals">Non-metals</string>
    <string name="category_alkali_metals">Alkali metals</string>
    <string name="category_alkaline_earth_metals">Alkaline earth metals</string>
    <string name="category_transition_metals">Transition metals</string>
    <string name="category_post_transition_metals">Post-transition metals</string>
    <string name="category_metalloids">Metalloids</string>
    <string name="category_lanthanides">Lanthanides</string>
    <string name="category_actinides">Actinides</string>
    <string name="category_halogens">Halogens</string>
    <string name="category_noble_gases">Noble gases</string>
    <string name="label_lanthanides_range">57-71</string>
    <string name="label_actinides_range">89-103</string>
    <string name="name_hydrogen">Hydrogen</string>
    <string name="name_helium">Helium</string>
    <string name="name_lithium">Lithium</string>
    <string name="name_beryllium">Beryllium</string>
    <string name="name_boron">Boron</string>
    <string name="name_carbon">Carbon</string>
    <string name="name_nitrogen">Nitrogen</string>
    <string name="name_oxygen">Oxygen</string>
    <string name="name_fluorine">Fluorine</string>
    <string name="name_neon">Neon</string>
    <string name="name_sodium">Sodium</string>
    <string name="name_magnesium">Magnesium</string>
    <string name="name_aluminium">Aluminium</string>
    <string name="name_silicon">Silicon</string>
    <string name="name_phosphorus">Phosphorus</string>
    <string name="name_sulfur">Sulfur</string>
    <string name="name_chlorine">Chlorine</string>
    <string name="name_argon">Argon</string>
    <string name="name_potassium">Potassium</string>
    <string name="name_calcium">Calcium</string>
    <string name="name_scandium">Scandium</string>
    <string name="name_titanium">Titanium</string>
    <string name="name_vanadium">Vanadium</string>
    <string name="name_chromium">Chromium</string>
    <string name="name_manganese">Manganese</string>
    <string name="name_iron">Iron</string>
    <string name="name_cobalt">Cobalt</string>
    <string name="name_nickel">Nickel</string>
    <string name="name_copper">Copper</string>
    <string name="name_zinc">Zinc</string>
    <string name="name_gallium">Gallium</string>
    <string name="name_germanium">Germanium</string>
    <string name="name_arsenic">Arsenic</string>
    <string name="name_selenium">Selenium</string>
    <string name="name_bromine">Bromine</string>
    <string name="name_krypton">Krypton</string>
    <string name="name_rubidium">Rubidium</string>
    <string name="name_strontium">Strontium</string>
    <string name="name_yttrium">Yttrium</string>
    <string name="name_zirconium">Zirconium</string>
    <string name="name_niobium">Niobium</string>
    <string name="name_molybdenum">Molybdenum</string>
    <string name="name_technetium">Technetium</string>
    <string name="name_ruthenium">Ruthenium</string>
    <string name="name_rhodium">Rhodium</string>
    <string name="name_palladium">Palladium</string>
    <string name="name_silver">Silver</string>
    <string name="name_cadmium">Cadmium</string>
    <string name="name_indium">Indium</string>
    <string name="name_tin">Tin</string>
    <string name="name_antimony">Antimony</string>
    <string name="name_tellurium">Tellurium</string>
    <string name="name_iodine">Iodine</string>
    <string name="name_xenon">Xenon</string>
    <string name="name_caesium">Caesium</string>
    <string name="name_barium">Barium</string>
    <string name="name_lanthanum">Lanthanum</string>
    <string name="name_cerium">Cerium</string>
    <string name="name_praseodymium">Praseodymium</string>
    <string name="name_neodymium">Neodymium</string>
    <string name="name_promethium">Promethium</string>
    <string name="name_samarium">Samarium</string>
    <string name="name_europium">Europium</string>
    <string name="name_gadolinium">Gadolinium</string>
    <string name="name_terbium">Terbium</string>
    <string name="name_dysprosium">Dysprosium</string>
    <string name="name_holmium">Holmium</string>
    <string name="name_erbium">Erbium</string>
    <string name="name_thulium">Thulium</string>
    <string name="name_ytterbium">Ytterbium</string>
    <string name="name_lutetium">Lutetium</string>
    <string name="name_hafnium">Hafnium</string>
    <string name="name_tantalum">Tantalum</string>
    <string name="name_tungsten">Tungsten</string>
    <string name="name_rhenium">Rhenium</string>
    <string name="name_osmium">Osmium</string>
    <string name="name_iridium">Iridium</string>
    <string name="name_platinum">Platinum</string>
    <string name="name_gold">Gold</string>
    <string name="name_mercury">Mercury</string>
    <string name="name_thallium">Thallium</string>
    <string name="name_lead">Lead</string>
    <string name="name_bismuth">Bismuth</string>
    <string name="name_polonium">Polonium</string>
    <string name="name_astatine">Astatine</string>
    <string name="name_radon">Radon</string>
    <string name="name_francium">Francium</string>
    <string name="name_radium">Radium</string>
    <string name="name_actinium">Actinium</string>
    <string name="name_thorium">Thorium</string>
    <string name="name_protactinium">Protactinium</string>
    <string name="name_uranium">Uranium</string>
    <string name="name_neptunium">Neptunium</string>
    <string name="name_plutonium">Plutonium</string>
    <string name="name_americium">Americium</string>
    <string name="name_curium">Curium</string>
    <string name="name_berkelium">Berkelium</string>
    <string name="name_californium">Californium</string>
    <string name="name_einsteinium">Einsteinium</string>
    <string name="name_fermium">Fermium</string>
    <string name="name_mendelevium">Mendelevium</string>
    <string name="name_nobelium">Nobelium</string>
    <string name="name_lawrencium">Lawrencium</string>
    <string name="name_rutherfordium">Rutherfordium</string>
    <string name="name_dubnium">Dubnium</string>
    <string name="name_seaborgium">Seaborgium</string>
    <string name="name_bohrium">Bohrium</string>
    <string name="name_hassium">Hassium</string>
    <string name="name_meitnerium">Meitnerium</string>
    <string name="name_darmstadtium">Darmstadtium</string>
    <string name="name_roentgenium">Roentgenium</string>
    <string name="name_copernicium">Copernicium</string>
    <string name="name_nihonium">Nihonium</string>
    <string name="name_flerovium">Flerovium</string>
    <string name="name_moscovium">Moscovium</string>
    <string name="name_livermorium">Livermorium</string>
    <string name="name_tennessine">Tennessine</string>
    <string name="name_oganesson">Oganesson</string>
</resources>