<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_close_24"
        app:title="@string/title_filters"
        app:titleCentered="true"
        style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mt_app_bar"
        app:layout_constraintBottom_toTopOf="@id/fl_bottom_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryBackground"
            android:fadeScrollbars="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">

                <CheckBox
                    android:id="@+id/cb_non_metals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="40dp"
                    android:text="@string/category_nonmetals"
                    tools:ignore="NotSibling" />

                <CheckBox
                    android:id="@+id/cb_alkali_metals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_non_metals"
                    android:text="@string/category_alkali_metals"/>

                <CheckBox
                    android:id="@+id/cb_alkaline_earth_metals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_alkali_metals"
                    android:text="@string/category_alkaline_earth_metals"/>

                <CheckBox
                    android:id="@+id/cb_transition_metals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_alkaline_earth_metals"
                    android:text="@string/category_transition_metals"/>

                <CheckBox
                    android:id="@+id/cb_post_transition_metals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_transition_metals"
                    android:text="@string/category_post_transition_metals"/>

                <CheckBox
                    android:id="@+id/cb_metalloids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_post_transition_metals"
                    android:text="@string/category_metalloids"/>

                <CheckBox
                    android:id="@+id/cb_lanthanides"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_metalloids"
                    android:text="@string/category_lanthanides"/>

                <CheckBox
                    android:id="@+id/cb_actinides"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_lanthanides"
                    android:text="@string/category_actinides"/>

                <CheckBox
                    android:id="@+id/cb_halogens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_actinides"
                    android:text="@string/category_halogens"/>

                <CheckBox
                    android:id="@+id/cb_noble_gases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="@id/cb_non_metals"
                    app:layout_constraintTop_toBottomOf="@id/cb_halogens"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/category_noble_gases"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_non_metals"
                    app:layout_constraintTop_toTopOf="@id/cb_non_metals"
                    app:layout_constraintBottom_toBottomOf="@id/cb_non_metals"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/nonMetals"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_alkali_metals"
                    app:layout_constraintTop_toTopOf="@id/cb_alkali_metals"
                    app:layout_constraintBottom_toBottomOf="@id/cb_alkali_metals"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/alkaliMetals"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_alkaline_earth_metals"
                    app:layout_constraintTop_toTopOf="@id/cb_alkaline_earth_metals"
                    app:layout_constraintBottom_toBottomOf="@id/cb_alkaline_earth_metals"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/alkalineEarthMetals"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_transition_metals"
                    app:layout_constraintTop_toTopOf="@id/cb_transition_metals"
                    app:layout_constraintBottom_toBottomOf="@id/cb_transition_metals"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/transitionMetals"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_post_transition_metals"
                    app:layout_constraintTop_toTopOf="@id/cb_post_transition_metals"
                    app:layout_constraintBottom_toBottomOf="@id/cb_post_transition_metals"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/postTransitionMetals"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_metalloids"
                    app:layout_constraintTop_toTopOf="@id/cb_metalloids"
                    app:layout_constraintBottom_toBottomOf="@id/cb_metalloids"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/metalloids"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_lanthanides"
                    app:layout_constraintTop_toTopOf="@id/cb_lanthanides"
                    app:layout_constraintBottom_toBottomOf="@id/cb_lanthanides"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/lanthanides"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_actinides"
                    app:layout_constraintTop_toTopOf="@id/cb_actinides"
                    app:layout_constraintBottom_toBottomOf="@id/cb_actinides"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/actinides"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_halogens"
                    app:layout_constraintTop_toTopOf="@id/cb_halogens"
                    app:layout_constraintBottom_toBottomOf="@id/cb_halogens"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/halogens"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintLeft_toRightOf="@id/cb_noble_gases"
                    app:layout_constraintTop_toTopOf="@id/cb_noble_gases"
                    app:layout_constraintBottom_toBottomOf="@id/cb_noble_gases"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="@color/nobleGases"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fl_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/primaryColor">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_button_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <Button
            android:id="@+id/bt_clear_filters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_clear_filters"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/gl_button_divider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/borderlessButtonStyle"/>


        <Button
            android:id="@+id/tv_apply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_apply"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/gl_button_divider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="?android:attr/borderlessButtonStyle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>